Updated app of apps to use just ngnix

--- a/app-of-apps.yaml
+++ b/app-of-apps.yaml
@@ -1,16 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-of-apps
+  name: gotham-mcsss
+  namespace: argocd
+  labels:
+    environment: production
+    type: app-of-apps
 spec:
   destination:
-    name: in-cluster
     namespace: argocd
+    server: https://kubernetes.default.svc
+  project: default
   source:
     path: apps
     repoURL: 'https://github.com/nick-draper/app-of-apps'
     targetRevision: HEAD
-  project: default
   # syncPolicy:
   #   automated:
   #     prune: true
