--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -7,11 +7,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: gotham-web
   template:
     metadata:
       labels:
-        app: nginx
+        app: gotham-web
     spec:
       containers:
       - name: nginx
