--- a/apps/db.yaml
+++ b/apps/db.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx
+  name: gotham-mcss-web
   namespace: argocd
 spec:
   project: default
