--- a/apps/ui.yaml
+++ b/apps/ui.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/nick-draper/app-set.git
-    targetRevision: HEAD
+    targetRevision: dev
     path: nginx
   destination:
     server: https://kubernetes.default.svc
