--- a/apps/db.yaml
+++ b/apps/db.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: gotham-mcss-db
+  name: gotham-db
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: https://github.com/nick-draper/app-set.git
-    targetRevision: qa
+    repoURL: https://github.com/nick-draper/vidly-db.git
+    targetRevision: main
     path: nginx
   destination:
     server: https://kubernetes.default.svc
-    namespace: gotham-mcss-db
+    namespace: gotham-db
   syncPolicy:
     automated:
       prune: true
