--- a/apps/ui.yaml
+++ b/apps/ui.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: gotham-mcss-ui
+  name: gotham-ui
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/nick-draper/app-set.git
-    targetRevision: dev
+    targetRevision: main
     path: nginx
   destination:
     server: https://kubernetes.default.svc
-    namespace: gotham-mcss-ui
+    namespace: gotham-ui
   syncPolicy:
     automated:
       prune: true
