--- a/apps/ui.yaml
+++ b/apps/ui.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/nick-draper/app-set.git
     targetRevision: main
-    path: nginx
+    path: .
   destination:
     server: https://kubernetes.default.svc
     namespace: gotham-ui
