--- a/apps/ui.yaml
+++ b/apps/ui.yaml
@@ -1,18 +1,25 @@
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: ApplicationSet
 metadata:
-  name: gotham-ui
+  name: gotham-ui-application-set
   namespace: argocd
 spec:
-  project: default
-  source:
-    repoURL: https://github.com/nick-draper/app-set.git
-    targetRevision: main
-    path: .
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: gotham-ui
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+  goTemplate: true
+  generators:
+  - list:
+      elements:
+      - env: dev
+      - env: qa
+      - env: prod
+  template:
+    metadata:
+      name: 'nginx-{{.env}}'
+    spec:
+      project: default
+      source:
+        repoURL: https://github.com/nick-draper/app-set.git
+        targetRevision: '{{ if eq .env "prod" }}main{{ else }}{{.env}}{{ end }}'
+        path: nginx
+      destination:
+        server: https://kubernetes.default.svc
+        namespace: '{{ if eq .env "prod" }}nginx{{ else }}nginx-{{.env}}{{ end }}'
