--- a/apps/ui.yaml
+++ b/apps/ui.yaml
@@ -18,7 +18,7 @@ spec:
       project: default
       syncPolicy:
         automated:
-          prune: {{ if eq .env "prod" }}false{{ else }}true{{ end }}
+          prune: '{{ if eq .env "prod" }}false{{ else }}true{{ end }}'
       source:
         repoURL: https://github.com/nick-draper/app-set.git
         targetRevision: '{{ if eq .env "prod" }}main{{ else }}{{.env}}{{ end }}'
