--- a/apps/ui.yaml
+++ b/apps/ui.yaml
@@ -11,14 +11,13 @@ spec:
       - env: dev
       - env: qa
       - env: prod
+      - true: true
+      - false: false
   template:
     metadata:
       name: 'nginx-{{.env}}'
     spec:
       project: default
-      syncPolicy:
-        automated:
-          prune: '{{ if eq .env "prod" }}false{{ else }}true{{ end }}'
       source:
         repoURL: https://github.com/nick-draper/app-set.git
         targetRevision: '{{ if eq .env "prod" }}main{{ else }}{{.env}}{{ end }}'
@@ -26,3 +25,14 @@ spec:
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{ if eq .env "prod" }}nginx{{ else }}nginx-{{.env}}{{ end }}'
+  templatePatch: |
+    spec:
+    {{- if eq .env "prod" }}
+      syncPolicy:
+        automated:
+          prune: {{ .false }}
+    {{ else }}
+      syncPolicy:
+        automated:
+          prune: {{ .true }}
+    {{- end }}
