--- a/apps/ui.yaml
+++ b/apps/ui.yaml
@@ -9,20 +9,17 @@ spec:
   - list:
       elements:
       - env: dev
-      - autoSync: true
-      - prune: true
+        autoSync: true
+        prune: true
       - env: qa
-      - noAutoSync: false
-      - noPrune: false
+        autoSync: true
+        prune: true
       - env: prod
   template:
     metadata:
       name: 'nginx-{{.env}}'
     spec:
       project: default
-      syncPolicy:
-        automated:
-          prune: '{{ if eq .env "prod" }}{{ .prune }}{{ else }}{{.noPrune}}{{ end }}'
       source:
         repoURL: https://github.com/nick-draper/app-set.git
         targetRevision: '{{ if eq .env "prod" }}main{{ else }}{{.env}}{{ end }}'
@@ -30,3 +27,10 @@ spec:
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{ if eq .env "prod" }}nginx{{ else }}nginx-{{.env}}{{ end }}'
+  templatePatch: |
+    spec:
+    {{- if .autoSync }}
+      syncPolicy:
+        automated:
+          prune: {{ .prune }}
+    {{- end }}
