--- a/apps/ui.yaml
+++ b/apps/ui.yaml
@@ -15,7 +15,8 @@ spec:
         autoSync: true
         prune: true
       - env: prod
-        automated: null
+        autoSync: true
+        prune: false
   template:
     metadata:
       name: 'nginx-{{.env}}'
@@ -34,7 +35,4 @@ spec:
       syncPolicy:
         automated:
           prune: {{ .prune }}  
-    {{- else }}
-      syncPolicy:
-        automated: {{ .automated }}  
     {{- end }}
